@@ -1,3 +1,5 @@
 # PATIA_2024
 
-java -cp build/libs/pddl4j-4.0.0.jar fr.uga.pddl4j.planners.statespace.FF pddl4j/TP/Domain/domain pddl4j/TP/Problem/problem
+Ici il faut lancer un clean puis un package avec maven.
+Ensuite utiliser cette commande java --add-opens java.base/java.lang=ALL-UNNAMED  -server -Xms2048m -Xmx2048m  -cp target/sokoban-1.0-SNAPSHOT-jar-with-dependencies.jar sokoban.SokobanMain
+Et pour changer le fichier tester il faut le changer dans config.properties.
